Bug 161412 - Warning in PDF password dialog should eventually disappear
Summary: Warning in PDF password dialog should eventually disappear
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.4.0.3 release
Hardware: All All
: low minor
Assignee: Not Assigned
URL:
Whiteboard: target:25.8.0 target:25.2.0.2
Keywords:
Depends on:
Blocks: PDF-Export-Options-Dialog
  Show dependency treegraph
 
Reported: 2024-06-04 07:54 UTC by Gabor Kelemen (Collabora)
Modified: 2025-01-12 12:09 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2024-06-04 07:54:46 UTC
This is a followup to bug 50400

Back there a warning was added that appears when the user types an invalid (non-ASCII) character into the PDF password field.
Issue is that this warning does not disappear, so the user has a hard time knowing that the next character they typed is a valid one or still an invalid one.
This is also related to bug 146947

1. Open a new document
2. File - Export As - Export As PDF
3. Go to the Security tab, press the Set Password button
4. Type some non-ASCII character into the Password field
-> at the bottom of the dialog the warning "Only Basic Latin characters can be entered" appears. 
5. Type an ASCII character like 'a'
-> the warning does not disappear, you are supposed to notice that this is a valid character, and part of the password.

Screenshot is attachment 194539 [details] from bug 161411

It would be better when typing a valid character the warning would disappear and reappear on typing an invalid character.

Version: 24.8.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: f6ea343e6fb2dc3539823dee60c9c6f96fc16275
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: hu-HU (hu_HU.UTF-8); UI: en-US
Calc: threaded
Comment 1 Stéphane Guillou (stragu) 2024-06-22 04:50:20 UTC
Reproduced in:

Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 151d997365f7bf271d63af535d29a9c3439c6d46
CPU threads: 8; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: CL threaded
Comment 2 Commit Notification 2025-01-09 18:52:18 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/77fc0018f5a5e6dccdc7125c223f1f6891812b82

tdf#161412 - UI: fix warning in PDF password dialog didn't disappear

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2025-01-12 12:09:56 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/d0d07f66a70f4554b53c53528b6993d08b655990

tdf#161412 - UI: fix warning in PDF password dialog didn't disappear

It will be available in 25.2.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.