tdf#161412 - UI: fix warning in PDF password dialog didn't disappear

Warning about "Only Basic Latin characters can be entered" should
only be highlighted until we are entering non-ASCII characters into
the password textbox.

Change-Id: I87c26a3b0b1777e0e76fe12422027aa2f377ad35
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/179891
Tested-by: Jenkins
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>